compiling_error.txt
testthread.cpp: In function 'int main()':
testthread.cpp:17:3: error: 'thread' is not a member of 'std'
   std::thread first (foo);     // spawn new thread that calls foo()
   ^
testthread.cpp:17:15: error: expected ';' before 'first'
   std::thread first (foo);     // spawn new thread that calls foo()
               ^
testthread.cpp:21:3: error: 'first' was not declared in this scope
   first.join();                // pauses until first finishes
   ^
